force-app/main/default/objects/Client_Meeting__c/fields/CSI_Score__c.field-meta.xml
<CustomField>
    <fullName>CSI_Score__c</fullName>
    <description>This mirrors the Customer Satisfaction Index.</description>
    <formula>VALUE(Text( Customer_Satisfaction_Index_CSI__c ))</formula>
    <label>CSI Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>