force-app/main/default/objects/Client_Meeting__c/fields/Customer_Engagement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Engagement_Notes__c</fullName>
    <label>Customer Engagement Notes</label>
    <length>15000</length>
    <type>Html</type>
</CustomField>