force-app/main/default/objects/Client_Meeting__c/fields/Customer_Satisfaction_Index_CSI__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction_Index_CSI__c</fullName>
    <label>Customer Satisfaction Index (CSI) 1-5</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>