force-app/main/default/objects/Client_Meeting__c/fields/Data_Collection__c.field-meta.xml
<CustomField>
    <fullName>Data_Collection__c</fullName>
    <label>Data Collection</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>