force-app/main/default/objects/Client_Meeting__c/fields/Data_Collection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Data_Collection_Notes__c</fullName>
    <label>Data Collection Notes</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>