force-app/main/default/objects/Client_Meeting__c/fields/Data_Studio_Report__c.field-meta.xml
<CustomField>
    <fullName>Data_Studio_Report__c</fullName>
    <description>DELETE LATER - This field was replaced by the already existing field &quot;Google Data Studio&quot; 2/10/23 because it pulls in the account link they were manually entering into this field.</description>
    <label>Data Studio Report</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>