force-app/main/default/objects/Client_Meeting__c/fields/Describe_what_you_expect_as_an_appt__c.field-meta.xml
<CustomField>
    <fullName>Describe_what_you_expect_as_an_appt__c</fullName>
    <defaultValue>&quot;Take them back to the definition of an appointment and insert worst case scenario (you drive all the way to an appointment for the receptionist to tell you they don’t want to meet anymore or they cancelled prior to the meeting).&quot;</defaultValue>
    <inlineHelpText>A. Take them back to the definition of an appointment and insert worst case scenario (you drive all the way to an appointment for the receptionist to tell you they don’t want to meet anymore or they cancelled prior to the meeting).</inlineHelpText>
    <label>Describe what you expect as an appt</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>