force-app/main/default/objects/Client_Meeting__c/fields/Design_Direction__c.field-meta.xml
<CustomField>
    <fullName>Design_Direction__c</fullName>
    <label>Design Direction</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>