force-app/main/default/objects/Client_Meeting__c/fields/Did_Imp_Team_discuss_relevent_info__c.field-meta.xml
<CustomField>
    <fullName>Did_Imp_Team_discuss_relevent_info__c</fullName>
    <label>Did Imp Team discuss relevant info?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>