force-app/main/default/objects/Client_Meeting__c/fields/Did_PSM_discuss_relevant_info__c.field-meta.xml
<CustomField>
    <fullName>Did_PSM_discuss_relevant_info__c</fullName>
    <label>Did PSM discuss relevant info?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>