force-app/main/default/objects/Client_Meeting__c/fields/Did_we_clearly_define_team_roles__c.field-meta.xml
<CustomField>
    <fullName>Did_we_clearly_define_team_roles__c</fullName>
    <label>Did we clearly define team roles?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>