force-app/main/default/objects/Client_Meeting__c/fields/Did_we_explain_how_we_target_your_market__c.field-meta.xml
<CustomField>
    <fullName>Did_we_explain_how_we_target_your_market__c</fullName>
    <label>Did we explain how we target the market?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>