force-app/main/default/objects/Client_Meeting__c/fields/Did_we_explain_imp_process__c.field-meta.xml
<CustomField>
    <fullName>Did_we_explain_imp_process__c</fullName>
    <label>Did we explain imp process?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>