force-app/main/default/objects/Client_Meeting__c/fields/Did_we_explain_the_email_library__c.field-meta.xml
<CustomField>
    <fullName>Did_we_explain_the_email_library__c</fullName>
    <label>Did we explain the email library?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>