force-app/main/default/objects/Client_Meeting__c/fields/Did_we_have_the_right_targets__c.field-meta.xml
<CustomField>
    <fullName>Did_we_have_the_right_targets__c</fullName>
    <label>Did we have the right targets?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>