force-app/main/default/objects/Client_Meeting__c/fields/Did_we_understand_your_message_correct__c.field-meta.xml
<CustomField>
    <fullName>Did_we_understand_your_message_correct__c</fullName>
    <label>Did we understand your message correct?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>