force-app/main/default/objects/Client_Meeting__c/fields/Did_you_feel_we_were_ready_to_start__c.field-meta.xml
<CustomField>
    <fullName>Did_you_feel_we_were_ready_to_start__c</fullName>
    <label>Did you feel we were ready to start?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>