force-app/main/default/objects/Client_Meeting__c/fields/Did_you_meet_the_entire_team__c.field-meta.xml
<CustomField>
    <fullName>Did_you_meet_the_entire_team__c</fullName>
    <label>Did you meet the entire team?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>