force-app/main/default/objects/Client_Meeting__c/fields/Did_you_review_the_agreement__c.field-meta.xml
<CustomField>
    <fullName>Did_you_review_the_agreement__c</fullName>
    <label>Did you review the agreement?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>