force-app/main/default/objects/Client_Meeting__c/fields/Direct_Mail__c.field-meta.xml
<CustomField>
    <fullName>Direct_Mail__c</fullName>
    <label>Direct Mail</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>