force-app/main/default/objects/Client_Meeting__c/fields/Director_of_Success__c.field-meta.xml
<CustomField>
    <fullName>Director_of_Success__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director of Success</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_MeetingsLQlF</relationshipName>
    <type>Lookup</type>
</CustomField>