force-app/main/default/objects/Client_Meeting__c/fields/Do_you_understand_the_portal__c.field-meta.xml
<CustomField>
    <fullName>Do_you_understand_the_portal__c</fullName>
    <label>Do you understand the portal?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>