force-app/main/default/objects/Client_Meeting__c/fields/Email_Notes__c.field-meta.xml
<CustomField>
    <fullName>Email_Notes__c</fullName>
    <label>Email Notes</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>