force-app/main/default/objects/Client_Meeting__c/fields/Emails_Collected__c.field-meta.xml
<CustomField>
    <fullName>Emails_Collected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emails Collected</label>
    <type>Checkbox</type>
</CustomField>