force-app/main/default/objects/Client_Meeting__c/fields/Emails_contained_everything_expected__c.field-meta.xml
<CustomField>
    <fullName>Emails_contained_everything_expected__c</fullName>
    <label>Emails contained everything expected?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>