force-app/main/default/objects/Client_Meeting__c/fields/Equal_Opportunity_Employer__c.field-meta.xml
<CustomField>
    <fullName>Equal_Opportunity_Employer__c</fullName>
    <label>Equal Opportunity Employer</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>