force-app/main/default/objects/Client_Meeting__c/fields/External_Attendee_Email_Address_2__c.field-meta.xml
<CustomField>
    <fullName>External_Attendee_Email_Address_2__c</fullName>
    <label>External Attendee Email Address #2</label>
    <type>Email</type>
</CustomField>