force-app/main/default/objects/Client_Meeting__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <label>Feedback</label>
    <length>7500</length>
    <type>Html</type>
</CustomField>