force-app/main/default/objects/Client_Meeting__c/fields/Feedback_Long__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Long__c</fullName>
    <description>Feedback for MRM - non rich text</description>
    <label>Feedback</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>