force-app/main/default/objects/Client_Meeting__c/fields/Feedback_on_Inbound_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Feedback_on_Inbound_Implementation__c</fullName>
    <defaultValue>&quot;Any feedback for the implementation team or Abstrakt so far?&quot;</defaultValue>
    <label>Feedback on Inbound Implementation</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>