force-app/main/default/objects/Client_Meeting__c/fields/Fill_in_Client_Follow_Up_Dates__c.field-meta.xml
<CustomField>
    <fullName>Fill_in_Client_Follow_Up_Dates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fill in Client Follow-Up Dates</label>
    <type>Checkbox</type>
</CustomField>