force-app/main/default/objects/Client_Meeting__c/fields/Focus_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Focus_Accounts__c</fullName>
    <label>Focus Accounts</label>
    <length>13000</length>
    <type>Html</type>
</CustomField>