force-app/main/default/objects/Client_Meeting__c/fields/Follow_Up_on_TOCs__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_on_TOCs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow-Up on TOCs</label>
    <type>Checkbox</type>
</CustomField>