force-app/main/default/objects/Client_Meeting__c/fields/Free_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Free_Accounts__c</fullName>
    <label>Free Accounts</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>