force-app/main/default/objects/Client_Meeting__c/fields/Free_RISK__c.field-meta.xml
<CustomField>
    <fullName>Free_RISK__c</fullName>
    <label>Free RISK</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>