force-app/main/default/objects/Client_Meeting__c/fields/Frequency_of_Seed_Sprout_Bloom__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_Seed_Sprout_Bloom__c</fullName>
    <defaultValue>&quot;In our first year together, you can expect about 60% of our leads to be seeds. It’s safe to assume 30% will be sprouts and about 1 in 10 will be Blooms. As time passes, we see these numbers flip-flop, but in our first year this is a safe expectation. (PSM Should use PDF for Seed, Sprout, Bloom to explain this further)&quot;</defaultValue>
    <label>Frequency of Seed, Sprout, Bloom</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>