force-app/main/default/objects/Client_Meeting__c/fields/Future_Phases__c.field-meta.xml
<CustomField>
    <fullName>Future_Phases__c</fullName>
    <label>Future Phases</label>
    <length>2500</length>
    <type>Html</type>
</CustomField>