force-app/main/default/objects/Client_Meeting__c/fields/Get_to_know_each_other__c.field-meta.xml
<CustomField>
    <fullName>Get_to_know_each_other__c</fullName>
    <defaultValue>&quot;Tell me about yourself&quot;</defaultValue>
    <label>Get to know each other</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>