force-app/main/default/objects/Client_Meeting__c/fields/Google_Data_Studio__c.field-meta.xml
<CustomField>
    <fullName>Google_Data_Studio__c</fullName>
    <description>Pulls in the account field &quot;Google Data Studio URL&quot;</description>
    <formula>Account__r.Google_Data_Studio_URL__c</formula>
    <inlineHelpText>Pulls in the account field &quot;Google Data Studio URL&quot;</inlineHelpText>
    <label>Google Data Studio</label>
    <type>Text</type>
</CustomField>