force-app/main/default/objects/Client_Meeting__c/fields/Graded_Senior_Calls__c.field-meta.xml
<CustomField>
    <fullName>Graded_Senior_Calls__c</fullName>
    <description>Used to go over ESR calls graded.</description>
    <label>Graded Senior Calls</label>
    <type>TextArea</type>
</CustomField>