force-app/main/default/objects/Client_Meeting__c/fields/Grow_Show_Episode_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Grow_Show_Episode_Recommendation__c</fullName>
    <description>Used on Sapper MRM to encourage clients to listen to the Grow Show podcast.</description>
    <inlineHelpText>Highlight the most relevant podcast that would benefit the client</inlineHelpText>
    <label>Grow Show Episode Recommendation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>