force-app/main/default/objects/Client_Meeting__c/fields/Hasn_t_closed_enough_business__c.field-meta.xml
<CustomField>
    <fullName>Hasn_t_closed_enough_business__c</fullName>
    <label>Hasn&apos;t closed enough business?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>