force-app/main/default/objects/Client_Meeting__c/fields/Held_By__c.field-meta.xml
<CustomField>
    <fullName>Held_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Held By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Meetings1</relationshipName>
    <type>Lookup</type>
</CustomField>