force-app/main/default/objects/Client_Meeting__c/fields/How_are_you_tracking_your_leads__c.field-meta.xml
<CustomField>
    <fullName>How_are_you_tracking_your_leads__c</fullName>
    <label>How are you tracking your leads?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>