force-app/main/default/objects/Client_Meeting__c/fields/How_can_we_improve_our_process__c.field-meta.xml
<CustomField>
    <fullName>How_can_we_improve_our_process__c</fullName>
    <label>How can we improve our process?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>