force-app/main/default/objects/Client_Meeting__c/fields/How_can_we_maintain_a_long_partnership__c.field-meta.xml
<CustomField>
    <fullName>How_can_we_maintain_a_long_partnership__c</fullName>
    <label>How can we maintain a long partnership?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>