force-app/main/default/objects/Client_Meeting__c/fields/How_did_you_win_your_largest_client__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_win_your_largest_client__c</fullName>
    <description>Used for Sapper Consulting Implementation wrap to under their business and sales process.</description>
    <label>How did you win your largest client?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>