force-app/main/default/objects/Client_Meeting__c/fields/How_Do_You_Currently_Get_Leads__c.field-meta.xml
<CustomField>
    <fullName>How_Do_You_Currently_Get_Leads__c</fullName>
    <label>How Do You Currently Get Leads?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>