force-app/main/default/objects/Client_Meeting__c/fields/How_do_you_track_follow_ups__c.field-meta.xml
<CustomField>
    <fullName>How_do_you_track_follow_ups__c</fullName>
    <description>Used on Sapper Consulting Implementation Wrap Up to understand client&apos;s sales process.</description>
    <label>How do you track follow-ups?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>