force-app/main/default/objects/Client_Meeting__c/fields/How_have_you_gathered_leads_in_past__c.field-meta.xml
<CustomField>
    <fullName>How_have_you_gathered_leads_in_past__c</fullName>
    <defaultValue>&quot;(100% Divided amongst Outbound, Inbound, Referrals, Upsells) &quot;</defaultValue>
    <label>How have you gathered leads in past?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>