force-app/main/default/objects/Client_Meeting__c/fields/How_long_is_your_sales_cycle__c.field-meta.xml
<CustomField>
    <fullName>How_long_is_your_sales_cycle__c</fullName>
    <description>Used on Sapper Consulting wrap up meeting to understand client&apos;s business and sales process.</description>
    <inlineHelpText>Please specify source type: Inbound, Outbound, Referral</inlineHelpText>
    <label>How long is your sales cycle?</label>
    <type>TextArea</type>
</CustomField>