force-app/main/default/objects/Client_Meeting__c/fields/How_many_appts_do_you_expect_monthly__c.field-meta.xml
<CustomField>
    <fullName>How_many_appts_do_you_expect_monthly__c</fullName>
    <defaultValue>&quot;CONFIRM THEY CAN HANDLE AMOUNT THAT CONTRACT REQUIRES!!!&quot;</defaultValue>
    <label>How many appts do you expect monthly?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>