force-app/main/default/objects/Client_Meeting__c/fields/How_many_touches_til_a_lead_is_dead__c.field-meta.xml
<CustomField>
    <fullName>How_many_touches_til_a_lead_is_dead__c</fullName>
    <label>How many touches til a lead is dead?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>