force-app/main/default/objects/Client_Meeting__c/fields/How_to_protect_your_investment__c.field-meta.xml
<CustomField>
    <fullName>How_to_protect_your_investment__c</fullName>
    <label>How to protect your investment</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>