force-app/main/default/objects/Client_Meeting__c/fields/How_we_are_supporting_these_goals__c.field-meta.xml
<CustomField>
    <fullName>How_we_are_supporting_these_goals__c</fullName>
    <label>How we are supporting these goals:</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>