force-app/main/default/objects/Client_Meeting__c/fields/How_will_you_define_success_after_1_year__c.field-meta.xml
<CustomField>
    <fullName>How_will_you_define_success_after_1_year__c</fullName>
    <label>How will you define success after 1 year</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>