force-app/main/default/objects/Client_Meeting__c/fields/How_Would_You_Introduce_Your_Company__c.field-meta.xml
<CustomField>
    <fullName>How_Would_You_Introduce_Your_Company__c</fullName>
    <label>How Would You Introduce Your Company?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>