force-app/main/default/objects/Client_Meeting__c/fields/Identify_Target_Market__c.field-meta.xml
<CustomField>
    <fullName>Identify_Target_Market__c</fullName>
    <description>MRM Partner meeting pipeline notes</description>
    <label>Identify Target Market</label>
    <length>7500</length>
    <type>Html</type>
</CustomField>