force-app/main/default/objects/Client_Meeting__c/fields/ImpBoth_parties_stayed_the_whole_meeting__c.field-meta.xml
<CustomField>
    <fullName>ImpBoth_parties_stayed_the_whole_meeting__c</fullName>
    <label>Both parties stayed the whole meeting?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>