force-app/main/default/objects/Client_Meeting__c/fields/impDid_the_Imp_team_own_transition__c.field-meta.xml
<CustomField>
    <fullName>impDid_the_Imp_team_own_transition__c</fullName>
    <label>Did the Imp team own transition?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>