force-app/main/default/objects/Client_Meeting__c/fields/impDid_we_cover_too_much_to_absorb__c.field-meta.xml
<CustomField>
    <fullName>impDid_we_cover_too_much_to_absorb__c</fullName>
    <label>Did we cover too much to absorb?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>