force-app/main/default/objects/Client_Meeting__c/fields/impDid_we_not_cover_enough_details__c.field-meta.xml
<CustomField>
    <fullName>impDid_we_not_cover_enough_details__c</fullName>
    <label>Did we not cover enough details?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>