force-app/main/default/objects/Client_Meeting__c/fields/Implementation_Experience_Score__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Experience_Score__c</fullName>
    <inlineHelpText>Score between 1-5</inlineHelpText>
    <label>Implementation Experience Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>