force-app/main/default/objects/Client_Meeting__c/fields/Implementation_Packet__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Packet__c</fullName>
    <formula>Account__r.Implementation_Packet_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Packet</label>
    <type>Text</type>
</CustomField>