force-app/main/default/objects/Client_Meeting__c/fields/impWere_all_your_concerns_address__c.field-meta.xml
<CustomField>
    <fullName>impWere_all_your_concerns_address__c</fullName>
    <label>Were all your concerns address?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>