force-app/main/default/objects/Client_Meeting__c/fields/Inbound_Goals__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Goals__c</fullName>
    <label>Inbound Goals</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>