force-app/main/default/objects/Client_Meeting__c/fields/Inbound_Implementation_Wrap_Up__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Implementation_Wrap_Up__c</fullName>
    <defaultValue>&quot;Previous marketing efforts and current strategy&quot;+SUBSTITUTE($Label.NewLine, &quot;-&quot;, &quot;&quot;)+ SUBSTITUTE($Label.NewLine, &quot;-&quot;, &quot;&quot;)+
&quot;What you’re looking to accomplish with our program&quot;+SUBSTITUTE($Label.NewLine, &quot;-&quot;, &quot;&quot;)+ SUBSTITUTE($Label.NewLine, &quot;-&quot;, &quot;&quot;)+
&quot;What you can expect from us going forward&quot;+SUBSTITUTE($Label.NewLine, &quot;-&quot;, &quot;&quot;)+ SUBSTITUTE($Label.NewLine, &quot;-&quot;, &quot;&quot;)+
&quot;Feedback on the program thus far&quot;</defaultValue>
    <description>Used on the Pipeline Inbound Implementation Wrap-Up Meeting record type.</description>
    <label>Inbound Implementation Wrap-Up Agenda</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>