force-app/main/default/objects/Client_Meeting__c/fields/Inbound_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Metrics__c</fullName>
    <label>Inbound Metrics</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>