force-app/main/default/objects/Client_Meeting__c/fields/Inbound_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Opportunities__c</fullName>
    <label>Inbound Opportunities</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>