force-app/main/default/objects/Client_Meeting__c/fields/Inbound_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Strategy__c</fullName>
    <label>Inbound Strategy</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>