force-app/main/default/objects/Client_Meeting__c/fields/Inbound_Success_Notes__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Success_Notes__c</fullName>
    <label>Inbound Success Notes</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>