force-app/main/default/objects/Client_Meeting__c/fields/Insight_from_Other_Clients__c.field-meta.xml
<CustomField>
    <fullName>Insight_from_Other_Clients__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insight from Other Clients</label>
    <type>Checkbox</type>
</CustomField>