force-app/main/default/objects/Client_Meeting__c/fields/Internal_Attendee_2__c.field-meta.xml
<CustomField>
    <fullName>Internal_Attendee_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Attendee #2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Monthly_Results_Meetings2</relationshipName>
    <type>Lookup</type>
</CustomField>