force-app/main/default/objects/Client_Meeting__c/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <inlineHelpText>Only available internally.  Clients cannot view in their portal.</inlineHelpText>
    <label>Internal Notes</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>