force-app/main/default/objects/Client_Meeting__c/fields/Intricacies_with_Messaging__c.field-meta.xml
<CustomField>
    <fullName>Intricacies_with_Messaging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intricacies with Messaging</label>
    <type>Checkbox</type>
</CustomField>