force-app/main/default/objects/Client_Meeting__c/fields/Introduce_your_Organization_to_KDMs__c.field-meta.xml
<CustomField>
    <fullName>Introduce_your_Organization_to_KDMs__c</fullName>
    <description>MRM Partner Meeting Notes</description>
    <label>Introduce your Organization to KDMs</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>