force-app/main/default/objects/Client_Meeting__c/fields/Introduction_Review__c.field-meta.xml
<CustomField>
    <fullName>Introduction_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Calls Made, Live Connects, Closing Ratios, Email sent, Results</inlineHelpText>
    <label>Introduction Review</label>
    <type>Checkbox</type>
</CustomField>