force-app/main/default/objects/Client_Meeting__c/fields/Introductions_Sales_Hand_Off__c.field-meta.xml
<CustomField>
    <fullName>Introductions_Sales_Hand_Off__c</fullName>
    <label>Introductions</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>