force-app/main/default/objects/Client_Meeting__c/fields/Is_it_the_wrong_type_of_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Is_it_the_wrong_type_of_opportunity__c</fullName>
    <label>Is it the wrong type of opportunity?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>