force-app/main/default/objects/Client_Meeting__c/fields/Is_the_business_reoccurring_revenue__c.field-meta.xml
<CustomField>
    <fullName>Is_the_business_reoccurring_revenue__c</fullName>
    <label>Is the business reoccurring revenue?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>